--- a/fonts/btfont.css
+++ b/fonts/btfont.css
@@ -7,3 +7,29 @@ font-display: swap;
 src: url(https://shatranjkekhiladi.github.io/fonts/BTCurve_Rg/BTCurve_Rg.ttf) format('truetype');
 }
 
+/* BT Curve Regular Italics */
+@font-face {
+font-family: 'BT Curve';
+font-style: italic;
+font-weight: 400;
+font-display: swap;
+src: url(https://shatranjkekhiladi.github.io/fonts/BTCurve_Rg/BTCurve_It.ttf) format('truetype');
+}
+
+/* BT Curve Bold */
+@font-face {
+font-family: 'BT Curve';
+font-style: normal;
+font-weight: 700;
+font-display: swap;
+src: url(https://shatranjkekhiladi.github.io/fonts/BTCurve_Rg/BTCurve_Bd.ttf) format('truetype');
+}
+
+/* BT Curve Bold Italic */
+@font-face {
+font-family: 'BT Curve';
+font-style: italic;
+font-weight: 700;
+font-display: swap;
+src: url(https://shatranjkekhiladi.github.io/fonts/BTCurve_Rg/BTCurve_BdIt.ttf) format('truetype');
+}
